# Small-Test-Security

./: Cargo.toml  DEPLOYMENT-SUCCESS.md  EXTENSIONS.md  FINAL-VERIFICATION.md  README.md  WEB3-TESTING-GUIDE.md
api-test/: .env  .env.sample  ADVANCED-TESTING-GUIDE.md  COMPLETE-SETUP.md  COMPREHENSIVE-TESTING-GUIDE.md  Cargo.toml  RUNNING-ADVANCED-TESTS.md  run-extended-tests.ps1  run-tests.ps1  run-tests.sh  test-dashboard.ps1  verify-complete-setup.ps1
api-test/benches/: api_benchmarks.rs
api-test/ci-cd/github-workflows/: advanced-testing.yml
api-test/dashboard/: advanced-dashboard.ps1
api-test/k6-tests/: advanced-load-scenario.js  basic-load-test.js
api-test/reporting/: generate-html-report.ps1
api-test/security-scanning/: zap-automation.js
api-test/src/: lib.rs
api-test/src/web3/: contract.rs  mod.rs  provider.rs  security.rs  utils.rs  wallet.rs
api-test/tests/: 01_unit.rs  02_handler.rs  03_router.rs  04_integration_db.rs  05_e2e.rs  06_contract.rs  07_openapi_snapshot.rs  08_snapshot_response.rs  09_property.rs  13_security.rs  14_resilience.rs  15_concurrency.rs  16_migrations.rs  advanced_api_documentation.rs  advanced_chaos_engineering.rs  advanced_fuzzing.rs  advanced_graphql.rs  advanced_monitoring_alerting.rs  advanced_performance_profiling.rs  advanced_security_scanning.rs  advanced_test_data_management.rs  api_contract_evolution.rs  auth_and_rbac.rs  chaos_engineering.rs  complex_property_testing.rs  cors.rs  distributed_load_testing.rs  fuzz_props.proptest-regressions  fuzz_props.rs  graphql.rs  health.rs  idor.rs  input_validation.rs  json_shape_snapshot.rs  openapi_validation.rs  pagination_and_limits.rs  rate_limit.rs  security_headers.rs  simple_advanced_test.rs  upload_size.rs  (+1 more)
api-test/tests/common/: mod.rs
api-test/tests/owasp/api_top10/: api10_unsafe_api_consumption.rs  api1_bola.rs  api2_broken_auth.rs  api3_property_level_auth.rs  api4_unrestricted_resource_consumption.rs  api5_function_level_auth.rs  api6_sensitive_business_flows.rs  api7_ssrf.rs  api8_security_misconfiguration.rs  api9_improper_inventory.rs
api-test/tests/owasp/asvs/: README.md
api-test/tests/owasp/common/: mod.rs
api-test/tests/owasp/top10/: a01_broken_access_control.rs  a02_cryptographic_failures.rs  a03_injection.rs  a04_insecure_design.rs  a05_security_misconfiguration.rs  a06_vulnerable_outdated_components.rs  a07_identification_auth_failures.rs  a08_software_data_integrity_failures.rs  a09_logging_monitoring_failures.rs  a10_ssrf.rs
api-test/tests/snapshots/: 07_openapi_snapshot__openapi.json.snap  08_snapshot_response__markets_json_stable.snap
api-test/tests/web3/: blockchain_interactions.rs  contract_interactions.rs  security.rs  smart_contracts.rs  wallet_transactions.rs
benches/: fee_bench.rs
daily-task/: daily-test.md
docs-test-types/: 16 api test.md  api-test-docs.md  complete-extension-guide.md  cover-all-api-types.md  extending-api-tests.md  owasp.md  test-type-command.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fee.rs
src/: http.rs  lib.rs
tests/: cli.rs  fee_api.rs  fee_props.rs  http_async.rs  http_snap.rs  postgres_it.rs
tests/snapshots/: http_snap__health_v1.snap
