[package]
name = "api-test"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
# HTTP client & utils for API tests
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "cookies", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["clock"] }
jsonwebtoken = "9"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
regex = "1"

tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net"] }
insta = { version = "1", features = ["json"] }
proptest = "1"

# Local stub server helpers
axum = { version = "0.7", features = ["macros"] }

# Router testing needs ServiceExt::oneshot
tower = "0.5"

# Align with workspace to avoid bollard-stubs conflict
testcontainers = "0.22"
testcontainers-modules = { version = "0.11", features = ["postgres", "blocking"] }
tokio-postgres = "0.7"

# Added missing dependencies
wiremock = "0.6"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
hyper = "1"

# New dependencies for extensions (made optional for cross-platform compatibility)
tokio-tungstenite = { version = "0.20", optional = true }
futures-util = { version = "0.3", optional = true }

# Advanced testing dependencies (made optional)
criterion = { version = "0.5", optional = true }
pprof = { version = "0.13", features = ["flamegraph"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
opentelemetry = { version = "0.22", optional = true }
opentelemetry-otlp = { version = "0.15", optional = true }
metrics = { version = "0.21", optional = true }
metrics-exporter-prometheus = { version = "0.14", optional = true }

# Security testing dependencies (made optional to avoid OpenSSL issues on Windows)
base64 = "0.21"
openssl = { version = "0.10", optional = true }
native-tls = { version = "0.2", optional = true }

# Advanced GraphQL dependencies (optional)
async-graphql = { version = "6.0", optional = true }
async-graphql-axum = { version = "6.0", optional = true }

# Advanced monitoring dependencies (optional)
sysinfo = { version = "0.29", optional = true }
serde_yaml = "0.9"

# New advanced dependencies
itertools = "0.12"
parking_lot = "0.12"
async-trait = "0.1"

[dev-dependencies]
mockall = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", features = ["json"] }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Advanced testing dev dependencies
tempfile = "3"
assert_cmd = "2"
predicates = "3"
assert_fs = "1"

# New advanced dev dependencies
serde_yaml = "0.9"
csv = "1.1"

[features]
# Optional features to enable/disable certain functionality
default = []
security-testing = ["openssl", "native-tls", "dep:openssl", "dep:native-tls"]
performance-testing = ["criterion", "pprof", "tracing", "tracing-subscriber", "opentelemetry", "opentelemetry-otlp", "metrics", "metrics-exporter-prometheus", "dep:criterion", "dep:pprof", "dep:tracing", "dep:tracing-subscriber", "dep:opentelemetry", "dep:opentelemetry-otlp", "dep:metrics", "dep:metrics-exporter-prometheus"]
websocket-testing = ["tokio-tungstenite", "futures-util", "dep:tokio-tungstenite", "dep:futures-util"]
graphql-testing = ["async-graphql", "async-graphql-axum", "dep:async-graphql", "dep:async-graphql-axum"]
monitoring = ["sysinfo", "dep:sysinfo"]
all = ["security-testing", "performance-testing", "websocket-testing", "graphql-testing", "monitoring"]

[[bench]]
name = "api_benchmarks"
harness = false